# cpp-unit-testing-using-catch2

./: CMakeLists.txt  chatgpt.md
02/demos/T9Predict/: CMakeLists.txt  Engine.h  WordsTree.h
02/demos/T9Predict/T9Predict/: Engine.cpp  WordsTree.cpp
02/demos/T9Predict/T9PredictTests/: CMakeLists.txt  T9PredictTests.cpp
02/demos/T9PredictTests/: CMakeLists.txt  ReadMe.txt  T9PredictTests.cpp
03/demos/T9Predict/: CMakeLists.txt  StringToDigitsEncoder.h  WordsNode.h  WordsTree.cpp
03/demos/T9PredictTests/: CMakeLists.txt  EngineTests.cpp  StringToDigitsDecoderTests.cpp  WordTreeTests.cpp
04/demos/T9Predict/: CMakeLists.txt
04/demos/T9PredictTests/: CMakeLists.txt  EngineTests.cpp  StringToDigitsDecoderTests.cpp  WordTreeTests.cpp
05/demos/T9Predict/: CMakeLists.txt
05/demos/T9PredictTests/: CMakeLists.txt  EngineTests.cpp  EngineTests_bdd.cpp  StringToDigitsDecoderTests.cpp  StringsToValueGenerator.h  WordTreeTests.cpp
